[package]
name = "rin_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version="0.9.21", features=["vga_320x200"]}
volatile = "0.2.7"
spin = "0.9.2"
x86_64 = "0.14.7"
uart_16550 = "0.2.16"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
ps2-mouse = "0.1.4"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["xbuild"]
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]

# 使用 `cargo build` 编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用 `cargo build --release` 编译时需要的配置
[profile.release]
panic = "abort" # 禁用 panic 时栈展开
